# RustCVLM

LearnByMeSelf/: Cargo.toml  api.rest
LearnByMeSelf/app_runner/: Cargo.toml
LearnByMeSelf/app_runner/src/: main.rs
LearnByMeSelf/service_user/: Cargo.toml
LearnByMeSelf/service_user/src/api/: create_users.rs  mod.rs
LearnByMeSelf/service_user/src/application/: create_user.rs  mod.rs
LearnByMeSelf/service_user/src/domain/: user.rs
vehicle-manager-axum/: Cargo.toml
vehicle-manager-axum/src/: main.rs
workspaceRust/: Cargo.toml
workspaceRust/app_runner/: Cargo.toml
workspaceRust/app_runner/src/: main.rs
workspaceRust/service_user/: Cargo.toml
workspaceRust/service_user/src/api/: users.rs
workspaceRust/service_user/src/application/: create_user.rs
workspaceRust/service_user/src/domain/: user.rs
