[package]
name = "app_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
serde = "1.0.228"
serde_json = "1.0.145"
service_user = { version = "0.1.0", path = "../service_user" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
